// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form card tests renders card - with html 1`] = `
<FormCard
  driver={MockedFormsListDriver {}}
  formData={
    Object {
      "lastModified": 2020-07-11T18:30:00.000Z,
      "name": "form2",
      "type": "HTML",
    }
  }
>
  <Card
    data-ouia-component-type="forms-card"
    data-ouia-safe={true}
    isSelectable={true}
    onClick={[Function]}
  >
    <article
      className="pf-c-card pf-m-selectable"
      data-ouia-component-id="OUIA-Generated-Card-2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
      onClick={[Function]}
      tabIndex="0"
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <CardHeaderMain>
            <div
              className=""
            >
              <Label
                variant="outline"
              >
                <span
                  className="pf-c-label pf-m-outline"
                >
                  <span
                    className="pf-c-label__content"
                  >
                    HTML
                  </span>
                </span>
              </Label>
            </div>
          </CardHeaderMain>
        </div>
      </CardHeader>
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Text
            className="pf-u-font-weight-bold"
            component="h1"
          >
            <h1
              className="pf-u-font-weight-bold"
              data-ouia-component-id="OUIA-Generated-Text-4"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
            >
              form2
            </h1>
          </Text>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <div
            className="pf-u-mt-md"
          >
            <Form>
              <FormBase
                innerRef={null}
              >
                <form
                  className="pf-c-form"
                  noValidate={true}
                >
                  <FormGroup
                    fieldId="type"
                    label="Type"
                  >
                    <GenerateId
                      prefix="pf-random-id-"
                    >
                      <div
                        className="pf-c-form__group"
                      >
                        <div
                          className="pf-c-form__group-label"
                        >
                          <label
                            className="pf-c-form__label"
                            htmlFor="type"
                          >
                            <span
                              className="pf-c-form__label-text"
                            >
                              Type
                            </span>
                          </label>
                           
                        </div>
                        <div
                          className="pf-c-form__group-control"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-5"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              HTML
                            </p>
                          </Text>
                        </div>
                      </div>
                    </GenerateId>
                  </FormGroup>
                  <FormGroup
                    fieldId="lastModified"
                    label="LastModified"
                  >
                    <GenerateId
                      prefix="pf-random-id-"
                    >
                      <div
                        className="pf-c-form__group"
                      >
                        <div
                          className="pf-c-form__group-label"
                        >
                          <label
                            className="pf-c-form__label"
                            htmlFor="lastModified"
                          >
                            <span
                              className="pf-c-form__label-text"
                            >
                              LastModified
                            </span>
                          </label>
                           
                        </div>
                        <div
                          className="pf-c-form__group-control"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-6"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              <t
                                ago={false}
                                calendar={false}
                                decimal={false}
                                element={null}
                                filter={[Function]}
                                fromNow={true}
                                interval={60000}
                                local={false}
                                onChange={[Function]}
                                titleFormat=""
                                toNow={false}
                                unit={null}
                                unix={false}
                                utc={false}
                                withTitle={false}
                              >
                                <time
                                  dateTime={"2020-07-11T18:30:00.000Z"}
                                >
                                  in 3 years
                                </time>
                              </t>
                            </p>
                          </Text>
                        </div>
                      </div>
                    </GenerateId>
                  </FormGroup>
                </form>
              </FormBase>
            </Form>
          </div>
        </div>
      </CardBody>
    </article>
  </Card>
</FormCard>
`;

exports[`Form card tests renders card - with tsx 1`] = `
<FormCard
  driver={MockedFormsListDriver {}}
  formData={
    Object {
      "lastModified": 2020-07-11T18:30:00.000Z,
      "name": "form1",
      "type": "TSX",
    }
  }
>
  <Card
    data-ouia-component-type="forms-card"
    data-ouia-safe={true}
    isSelectable={true}
    onClick={[Function]}
  >
    <article
      className="pf-c-card pf-m-selectable"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
      onClick={[Function]}
      tabIndex="0"
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <CardHeaderMain>
            <div
              className=""
            >
              <Label
                variant="outline"
              >
                <span
                  className="pf-c-label pf-m-outline"
                >
                  <span
                    className="pf-c-label__content"
                  >
                    REACT
                  </span>
                </span>
              </Label>
            </div>
          </CardHeaderMain>
        </div>
      </CardHeader>
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Text
            className="pf-u-font-weight-bold"
            component="h1"
          >
            <h1
              className="pf-u-font-weight-bold"
              data-ouia-component-id="OUIA-Generated-Text-1"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe={true}
              data-pf-content={true}
            >
              form1
            </h1>
          </Text>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <div
            className="pf-u-mt-md"
          >
            <Form>
              <FormBase
                innerRef={null}
              >
                <form
                  className="pf-c-form"
                  noValidate={true}
                >
                  <FormGroup
                    fieldId="type"
                    label="Type"
                  >
                    <GenerateId
                      prefix="pf-random-id-"
                    >
                      <div
                        className="pf-c-form__group"
                      >
                        <div
                          className="pf-c-form__group-label"
                        >
                          <label
                            className="pf-c-form__label"
                            htmlFor="type"
                          >
                            <span
                              className="pf-c-form__label-text"
                            >
                              Type
                            </span>
                          </label>
                           
                        </div>
                        <div
                          className="pf-c-form__group-control"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-2"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              TSX
                            </p>
                          </Text>
                        </div>
                      </div>
                    </GenerateId>
                  </FormGroup>
                  <FormGroup
                    fieldId="lastModified"
                    label="LastModified"
                  >
                    <GenerateId
                      prefix="pf-random-id-"
                    >
                      <div
                        className="pf-c-form__group"
                      >
                        <div
                          className="pf-c-form__group-label"
                        >
                          <label
                            className="pf-c-form__label"
                            htmlFor="lastModified"
                          >
                            <span
                              className="pf-c-form__label-text"
                            >
                              LastModified
                            </span>
                          </label>
                           
                        </div>
                        <div
                          className="pf-c-form__group-control"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-3"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              <t
                                ago={false}
                                calendar={false}
                                decimal={false}
                                element={null}
                                filter={[Function]}
                                fromNow={true}
                                interval={60000}
                                local={false}
                                onChange={[Function]}
                                titleFormat=""
                                toNow={false}
                                unit={null}
                                unix={false}
                                utc={false}
                                withTitle={false}
                              >
                                <time
                                  dateTime={"2020-07-11T18:30:00.000Z"}
                                >
                                  in 3 years
                                </time>
                              </t>
                            </p>
                          </Text>
                        </div>
                      </div>
                    </GenerateId>
                  </FormGroup>
                </form>
              </FormBase>
            </Form>
          </div>
        </div>
      </CardBody>
    </article>
  </Card>
</FormCard>
`;
